Adicionado campo enviado em pedidos-controller.

--- a/.env
+++ b/.env
@@ -6,4 +6,5 @@ COOKIE_PASSWORD=unifesp-token
 MONGODB_LOCAL=mongodb://localhost:27017/siswebcri-react2
 MONGODB_ATLAS=mongodb+srv://unifesp:1245@siswebcri01.qz4ou.mongodb.net/siswebcri?retryWrites=true&w=majority
 NODE_ENV=development
+SERVER_URL=https://siswebcri-react-backend.herokuapp.com
 PORT=5000
